syntax = "proto3";

/*
  This file defines a User message for the CRM application.
  The file is part of the com.cs301.crm.protobuf package,
  which organizes the protobuf schema related to the CRM system.

  The User message contains the following fields:

  1. uuid (string): A unique identifier for the user.
  2. first_name (string): The user's first name.
  3. last_name (string): The user's last name.
  4. email (string): The user's email address.
  5. password (string): The user's password (encrypted).
  6. phone_number (string): The user's phone number, used for MFA authentication
  7. role (UserRole): An enumeration that is either admin or agent

  This file is intended to be used in the generation of client and server code for
  communication between systems within the CRM platform.
 */

package com.cs301.crm.protobuf;

import "user_role.proto";

message User {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string phone_number = 6;
  UserRole user_role = 7;
}