syntax = "proto3";

package com.cs301.crm;

option java_multiple_files = true;
option java_package = "com.cs301.crm.protobuf";

message Notification {

  // email of the newly created user
  // Type: string
  // Example: "john@scrooge-bank.com"
  string email = 1;

  // First name of the newly created user
  // Type: string
  // Example: "john"
  string username = 2;

  // Temporary autogenerated password for initial login
  // Type: string
  // Example: "qwertyuiop"
  string tempPassword = 3;

  // Role of the newly created user
  // Type: string
  // Example: "agent"
  string role = 4;
}